# hpccg-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  kudu.sbatch  remoterun.sh  testing_plan.md  testing_plan.yaml
.cargo/: config.toml
0_cpp_versions/0_ref/: Makefile
0_cpp_versions/1_openmp/: Makefile
0_cpp_versions/2_mpi/: Makefile
0_cpp_versions/3_hybrid/: HPC_Sparse_Matrix.hpp  Makefile
0_cpp_versions/4_cmake/: CMakeLists.txt  Makefile
0_cpp_versions/4_cmake/src/: CMakeLists.txt  ddot.cpp
0_cpp_versions/4_cmake/test/: test_compute_residual.cpp  test_generate_matrix.cpp
0_cpp_versions/4_kokkos/: Makefile
0_cpp_versions/4_kokkos/src/: CMakeLists.txt  exchange_externals.cpp  waxpby.hpp
0_cpp_versions/4_kokkos/test/: test_ddot.cpp
0_cpp_versions/5_kokkos/: .gitignore  CMakeLists.txt  Makefile
0_cpp_versions/5_kokkos/src/: CMakeLists.txt  HPCCG.cpp  HPC_sparsemv.cpp  YAML_Doc.cpp  ddot.hpp  generate_matrix.cpp  make_local_matrix.cpp  mytimer.cpp  mytimer.hpp
0_cpp_versions/5_kokkos/test/: CMakeLists.txt  test_make_local_matrix.cpp  test_sparsemv.cpp  test_waxpby.cpp
0_cpp_versions/6_kokkos_mpi/: CMakeLists.txt  Makefile
0_cpp_versions/6_kokkos_mpi/src/: CMakeLists.txt  compute_residual.cpp  ddot.cpp  main.cpp  waxpby.cpp
0_cpp_versions/7_clang/: Makefile
0_cpp_versions/9_unifdef/: README.md
0_cpp_versions/9_unifdef/0_ref/: HPCCG.hpp  HPC_Sparse_Matrix.hpp  HPC_sparsemv.hpp  compute_residual.cpp  compute_residual.hpp  ddot.cpp  ddot.hpp  exchange_externals.cpp  exchange_externals.hpp  generate_matrix.cpp  main.cpp  make_local_matrix.hpp  mytimer.cpp  read_HPC_row.hpp
0_cpp_versions/9_unifdef/1_openmp/: HPCCG.cpp  HPC_Sparse_Matrix.cpp  ddot.cpp  generate_matrix.hpp  main.cpp  read_HPC_row.cpp
0_cpp_versions/9_unifdef/2_mpi/: HPC_Sparse_Matrix.cpp  Makefile  compute_residual.cpp  ddot.cpp  generate_matrix.hpp  main.cpp  make_local_matrix.hpp  read_HPC_row.hpp
0_cpp_versions/9_unifdef/3_hybrid/: HPCCG.cpp  HPCCG.hpp  HPC_Sparse_Matrix.hpp  HPC_sparsemv.cpp  HPC_sparsemv.hpp  compute_residual.hpp  ddot.cpp  ddot.hpp  exchange_externals.cpp  exchange_externals.hpp  generate_matrix.cpp  main.cpp  make_local_matrix.cpp  mytimer.cpp  read_HPC_row.cpp  waxpby.cpp
10_sprs/: Cargo.toml
10_sprs/src/: hpccg.rs  main.rs
10_sprs/src/hpccg/: compute_residual.rs  ddot.rs  sparse_matrix.rs  sparsmv.rs  waxpby.rs
1_naive/: Cargo.toml
1_naive/src/: hpccg.rs  main.rs
1_naive/src/hpccg/: mytimer.rs  sparse_matrix.rs
2_indexed/: Cargo.toml
2_indexed/src/: hpccg.rs  main.rs
2_indexed/src/hpccg/: compute_residual.rs  sparse_matrix.rs
3_single_indexed/: Cargo.toml
3_single_indexed/src/: main.rs
3_single_indexed/src/hpccg/: ddot.rs  sparse_matrix.rs  sparsemv.rs
4_no_bounds_check/: Cargo.toml
4_no_bounds_check/src/: main.rs
4_no_bounds_check/src/hpccg/: sparsemv.rs  waxpby.rs
5_iterators/: Cargo.toml
5_iterators/src/: main.rs
5_iterators/src/hpccg/: compute_residual.rs  sparsmv.rs
6_parallel/: Cargo.toml
6_parallel/src/: main.rs
7_mpi/: Cargo.toml
7_mpi/src/: hpccg.rs  main.rs  tests.rs
8_autocxx_test/: build.rs
8_autocxx_test/hpccg_src/: HPC_Sparse_Matrix.hpp  YAML_Doc.cpp  main.cpp
8_hybrid/: Cargo.toml
8_hybrid/src/: hpccg.rs  tests.rs
8_sprs/src/: hpccg.rs
9_sprs/: Cargo.toml
9_sprs/src/: main.rs
9_sprs/src/hpccg/: compute_residual.rs  mytimer.rs
9_unit_tests_split/src/: hpccg.rs
__misc/9_sprs/: Cargo.toml
autocxx_test/: Cargo.toml  build.rs
autocxx_test/hpccg_src/: HPC_Sparse_Matrix.cpp  YAML_Element.cpp  ddot.cpp  ddot.hpp  read_HPC_row.hpp  waxpby.cpp
autocxx_test/src/: cpp_ffi.rs  ddot.cpp  ddot.hpp  main.rs
autocxx_test/src/hpccg/: ddot.rs  waxpby.rs
cpp/: .clang-format  HPCCG.cpp  HPCCG.hpp  HPC_Sparse_Matrix.cpp  HPC_Sparse_Matrix.hpp  HPC_sparsemv.cpp  HPC_sparsemv.hpp  Makefile  YAML_Doc.cpp  YAML_Element.cpp  YAML_Element.hpp  compute_residual.cpp  compute_residual.hpp  ddot.cpp  ddot.hpp  dump_matlab_matrix.cpp  dump_matlab_matrix.hpp  exchange_externals.cpp  exchange_externals.hpp  generate_matrix.cpp  generate_matrix.hpp  generate_matrix_serial.cpp  main.cpp  make_local_matrix.cpp  make_local_matrix.hpp  mytimer.cpp  mytimer.hpp  read_HPC_row.cpp  read_HPC_row.hpp  waxpby.cpp  waxpby.hpp
datastruct_serial/: Cargo.toml
datastruct_serial/src/: compute_residual.rs  ddot.rs  hpc_sparse_matrix.rs  hpccg.rs  main.rs  mytimer.rs  sparsemv.rs  waxpby.rs
direct/: Cargo.toml
direct/src/: hpccg.rs  main.rs
direct_serial/: Cargo.toml
direct_serial/src/: README.md  main.rs  mytimer.rs
indexed/src/: main.rs
iterators/src/: hpccg.rs
naive/: Cargo.toml
naive/src/: main.rs
naive/src/hpccg/: ddot.rs  mytimer.rs  sparse_matrix.rs  sparsmv.rs
no_bounds_check/: Cargo.toml
no_bounds_check/src/: hpccg.rs
parallel/: Cargo.toml
parallel/src/: compute_residual.rs  ddot.rs  hpc_sparse_matrix.rs  main.rs  sparsemv.rs  waxpby.rs
single_indexed/: Cargo.toml
src/: README.md  compute_residual.rs  ddot.rs  hpc_sparse_matrix.rs  hpccg.rs  main.rs  sparsemv.rs  tests.rs  waxpby.rs
src/hpccg/: compute_residual.rs  ddot.rs  exchange_externals.rs  make_local_matrix.rs  mpi_universe.rs  mytimer.rs  sparse_matrix.rs  sparsemv.rs  sparsmv.rs  waxpby.rs
unit_tests_split/: Cargo.toml
unit_tests_split/src/: main.rs
utils/: Makefile  kudu.sbatch  kudu.sbatch.bak  pyproject.toml  remoterun.sh  remoterun.sh.bak  run_all.py
utils/src/: remote_run_all.py
(+40 files in other folders)
