[package]
name = "hpccg-rs"
version = "0.1.0"
edition = "2021"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
debug = true
#codegen-units = 1
#lto = "fat"
#panic = "abort"
#
#[build]
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
libc = "0.2.149"
mpi = { version = "0.7.0", features = ["derive"] }
once_cell = "1.19.0"
rayon = "1.8.0"

[dev-dependencies]
serial_test = "*"
