[package]
name = "hpccg-rs-sprs"
version = "0.1.0"
edition = "2021"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
# debug = true
codegen-units = 1
lto = "fat"
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
libc = "0.2.149"
ndarray = { version = "0.15.6", features = ["rayon"] }
sprs = { version = "0.11.1", features = ["multi_thread"] }
